--- a/website/templates/admin/delete_panel.html
+++ b/website/templates/admin/delete_panel.html
@@ -1,7 +1,14 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
+{% block pagename %}
+    Panelists
+{% endblock %}
+{% block button %}
+<a href="/new_panel/">
+    <button>Create New Panelist</button>
+</a>
+{% endblock %}
 {% block content %}
-
     <div id="overlay">
         <div id="text">
             <div id='close_button' onclick="off()">
@@ -16,15 +23,8 @@
                     <button id='submit' name='submit' value='yes'>Yes</button>
                     <button id='submit' name='submit' values='no'>No</button>
                 </form>
-                
             </div>
         </div>
-    </div>
-
-    <div class='create_button'>
-        <a href="/new_panel/">
-            <button onclick="on(); createTable()" >Create New Panelist</button>
-        </a>
     </div>
 
     <div class='display_grid'>
@@ -35,10 +35,14 @@
                     <p>Name: {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
                     <p>School: {{ panel.school }}</p>
                     <p>Defenses:</p>
+                    
                     {% if panel.defenses %} 
-                        {% for defense in panel.defenses %}
-                            <p>    - {{ defense.group.name }} - {{ defense.start_date }}</p>
-                        {% endfor %}
+                        <ul>
+                            {% for defense in panel.defenses %}
+                                <li>{{ defense.group.name }} - {{ defense.start_date }}</li>
+                            {% endfor %}
+                        </ul>
+                        
                     {% else %}
                         <p>NOTHING SCHEDULED</p>
                     {% endif %}
@@ -53,8 +57,4 @@
             {% endfor %}
         {% endif %}
     </div>
-    
-
-    <script>
-    </script>
 {% endblock %}
