--- a/website/templates/admin/delete_sched.html
+++ b/website/templates/admin/delete_sched.html
@@ -1,5 +1,13 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
+{% block pagename %}
+    Schedules
+{% endblock %}
+{% block button %}
+<a href="/new_sched/">
+    <button>Create New Defense Schedule</button>
+</a>
+{% endblock %}
 {% block content %}
     <div id="overlay">
         <div id="text">
@@ -20,11 +28,6 @@
         </div>
     </div>
 
-
-    <div class='create_button'>
-        <button>Create New Defense Schedule</button>
-    </div>
-
     <div class='display_grid'>
         {% if defenses %}
             {% for defense in defenses %}
@@ -40,7 +43,6 @@
                         {% endif %}
                     {% endfor %}
                     <p>Defense Date: {{ defense.start_date}}</p>
-                    <br>
                     <a href="/edit_sched/{{ defense.id }}">
                         <button>Edit</button>
                     </a>
