--- a/website/templates/admin/edit_rubric.html
+++ b/website/templates/admin/edit_rubric.html
@@ -1,5 +1,13 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
+{% block pagename %}
+Rubrics
+{% endblock %}
+{% block button %}
+<a href="/new_rubric/">
+    <button>Create New Rubric</button>
+</a>
+{% endblock %}
 {% block content %}
     <style>
         #text {
@@ -88,44 +96,36 @@
                         
                         <button type='submit' id='submit' name='submit'>Submit</button>
                     </form>
-
-
-                    
                 </div>
             </div>
         </div>
 
-
-        <div class='create_button'>
-            <button>Create New Rubric</button>
-        </div>
-
         <div class='display_grid'>
-            {% if rubrics %}
-                {% for rubric in rubrics %}
-                    <div class='box'>
-                        <p>ID: {{ rubric.id }}</p>
-                        <p>Description: {{ rubric.desc }}</p>
-                        <p>Rate 5: {{ rubric.rate5 }}</p>
-                        <p>Rate 4: {{ rubric.rate4 }}</p>
-                        <p>Rate 3: {{ rubric.rate3 }}</p>
-                        <p>Rate 2: {{ rubric.rate2 }}</p>
-                        <p>Rate 1: {{ rubric.rate1 }}</p>
-                        <p>Weight: x{{ rubric.weight }}</p>
-                        <p>Rubric Type: {{ rubric.rubric_type }}</p>
-                        <p>PBL Level: {{ rubric.pbl_lvl }}</p>
-                        <br>
-                        <a href="">
-                            <button>Edit</button>
-                        </a>
-                        <a href="">
-                            <button>Delete</button>
-                        </a>
-                    </div>
-                    
-                {% endfor %}
-            {% endif %}
-        </div>
+        {% if rubrics %}
+            {% for rubric in rubrics %}
+                <div class='box'>
+                    <p>ID: {{ rubric.id }}</p>
+                    <p>Description: {{ rubric.desc }}</p>
+                    <p>Rate 5: {{ rubric.rate5 }}</p>
+                    <p>Rate 4: {{ rubric.rate4 }}</p>
+                    <p>Rate 3: {{ rubric.rate3 }}</p>
+                    <p>Rate 2: {{ rubric.rate2 }}</p>
+                    <p>Rate 1: {{ rubric.rate1 }}</p>
+                    <p>Weight: x{{ rubric.weight }}</p>
+                    <p>Rubric Type: {{ rubric.rubric_type }}</p>
+                    <p>PBL Level: {{ rubric.pbl_lvl }}</p>
+                    <p>Category: {{ rubric.category }}</p>
+                    <br>
+                    <a href="/edit_rubric/{{ rubric.id }}">
+                        <button>Edit</button>
+                    </a>
+                    <a href="/delete_rubric/ {{ rubric.id }}">
+                        <button>Delete</button>
+                    </a>
+                </div>
+            {% endfor %}
+        {% endif %}
+    </div>
 
         <script>
 
