--- a/website/templates/admin/edit_sched.html
+++ b/website/templates/admin/edit_sched.html
@@ -1,5 +1,13 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
+{% block pagename %}
+Schedules
+{% endblock %}
+{% block button %}
+<a href="/new_sched/">
+    <button>Create New Defense Schedule</button>
+</a>
+{% endblock %}
 {% block content %}
     <div id="overlay">
         <div id="text">
@@ -8,7 +16,6 @@
                 <a href='/schedule'>
                     <img src="{{ url_for('static', filename='close.png') }}">
                 </a>
-                
             </div>
 
             <div>
@@ -83,11 +90,6 @@
         </div>
     </div>
 
-
-    <div class='create_button'>
-        <button>Create New Defense Schedule</button>
-    </div>
-
     <div class='display_grid'>
         {% if defenses %}
             {% for defense in defenses %}
@@ -104,7 +106,6 @@
 
                     {% endfor %}
                     <p>Defense Date: {{ defense.start_date}}</p>
-                    <br>
                     <a href="/edit_sched/{{ defense.id }}">
                         <button>Edit</button>
                     </a>
