--- a/website/templates/admin/edit_sheet.html
+++ b/website/templates/admin/edit_sheet.html
@@ -1,9 +1,15 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
-
+{% block pagename %}
+Rubrics
+{% endblock %}
+{% block button %}
+<a href="">
+    <button>Create New Template</button>
+</a>
+{% endblock %}
 {% block content %}
 <body onload='check()'>
-    
     <style>
        .MultiCheckBox {
            background-color: white;
@@ -84,7 +90,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 
     <script>
-        
         var arr = [];
         '{% for rubric in to_edit.rubric %}'
             arr.push('{{ rubric.id }}')
@@ -193,11 +198,6 @@
             $("#test").CreateMultiCheckBox({ width: '500px', defaultText : 'Select Below', height:'240px' });
         });
     </script>
-    <div class='create_button'>
-        <a href="">
-            <button>Create New Gradesheet Template</button>
-        </a>
-    </div>
 
     {% set rub_type = to_edit.sheet_type %}
     <div id="overlay">
@@ -233,14 +233,18 @@
         </div>
     </div>
 
-
     <div class='display_grid'>
         {% if templates %}
             {% for template in templates %}
                 <div class='box'>
                     <p>ID: {{ template.id }}</p>
                     <p>Gradesheet Type: {{ template.sheet_type }}</p>
-
+                    <p>Rubrics:</p>
+                    <ul>
+                        {% for rubric in template.rubric %}
+                            <li>{{ rubric.desc }}</li>
+                        {% endfor %}
+                    </ul>
                     <a href="/view_sheet/{{ template.id }}">
                         <button>View</button>
                     </a>
