--- a/website/templates/admin/edit_student.html
+++ b/website/templates/admin/edit_student.html
@@ -1,5 +1,8 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
+{% block pagename %}
+Students
+{% endblock %}
 {% block content %}
     <div id="overlay">
         <div id="text">
@@ -49,9 +52,13 @@
                 <div class='box'>
                     <p>ID: {{student.stud_no}}</p>
                     <p>Name: {{ student.last_name }}, {{ student.first_name }} {{ student.middle_in }}.</p>
-                    <p>Group: {{ student.group_id }}</p>
-                    <p>Group Name: {{ student.group.name }}</p>
-                    <br>
+                    <p>Group: {{ student.group_id }} - {{ student.group.name }}</p>
+                    <a href="/edit_student/{{ student.stud_no }}">
+                        <button>Edit</button>
+                    </a>
+                    <a href="/delete_student/{{ student.stud_no }}">
+                        <button>Delete</button>
+                    </a>
                 </div>
             {% endfor %}
         {% endif %}
