--- a/website/templates/admin/groups.html
+++ b/website/templates/admin/groups.html
@@ -1,12 +1,14 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
+{% block pagename %}
+    Groups
+{% endblock %}
+{% block button %}
+<a href="/new_group/">
+    <button>Create New Group</button>
+</a>
+{% endblock %}
 {% block content %}
-    <div class='create_button'>
-        <a href="/new_group/">
-            <button>Create New Group</button>
-        </a>
-    </div>
-
     <div class='display_grid'>
         {% if groups %}
             {% for group in groups %}
