--- a/website/templates/admin/new_panel.html
+++ b/website/templates/admin/new_panel.html
@@ -1,16 +1,22 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
+{% block pagename %}
+Panelists
+{% endblock %}
+{% block button %}
+<a href="/new_panel/">
+    <button>Create New Panelist</button>
+</a>
+{% endblock %}
 {% block content %}
     <div id="overlay">
         <div id="text">
-            
             <div id='close_button' onclick="off()">
                 <a href='/panelist'>
                     <img src="{{ url_for('static', filename='close.png') }}">
                 </a>
-                
             </div>
-
+            <p>New Panelist</p>
             <div>
                 <form method='POST'>
                     <label for="userCode">User Code:</label>
@@ -35,16 +41,9 @@
 
                     <button type='submit' id='submit' name='submit'>Submit</button>
                 </form>
-                
             </div>
         </div>
     </div>
-
-
-    <div class='create_button'>
-        <button>Create New Panelist</button>
-    </div>
-
     <div class='display_grid'>
         {% if panels %}
             {% for panel in panels %}
@@ -58,10 +57,4 @@
             {% endfor %}
         {% endif %}
     </div>
-    
-
-    
-    <script>
-        var user = JSON.parse('{{ user | tojson | safe}}');
-    </script>
 {% endblock %}
