--- a/website/templates/admin/new_sched.html
+++ b/website/templates/admin/new_sched.html
@@ -1,5 +1,13 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
+{% block pagename %}
+Schedules
+{% endblock %}
+{% block button %}
+<a href="/new_sched/">
+    <button>Create New Defense Schedule</button>
+</a>
+{% endblock %}
 {% block content %}
     <div id="overlay">
         <div id="text">
@@ -83,11 +91,6 @@
         </div>
     </div>
 
-
-    <div class='create_button'>
-        <button>Create New Defense Schedule</button>
-    </div>
-
     <div class='display_grid'>
         {% if defenses %}
             {% for defense in defenses %}
@@ -96,10 +99,19 @@
                     <p>Group Name: {{ defense.group.name }} </p>
                     <p>Panels:</p>
                     {% for panel in defense.panels %}
-                        <p>    - {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
+                        {% if panel.id == defense.head_panel_id: %}
+                            <p>    HP - {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
+                        {% else: %}
+                            <p>    - {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
+                        {% endif %}
                     {% endfor %}
                     <p>Defense Date: {{ defense.start_date}}</p>
-                    <br>
+                    <a href="/edit_sched/{{ defense.id }}">
+                        <button>Edit</button>
+                    </a>
+                    <a href="/delete_sched/{{ defense.id }}">
+                        <button>Delete</button>
+                    </a>
                 </div>
                 
             {% endfor %}
