--- a/website/templates/admin/panelist.html
+++ b/website/templates/admin/panelist.html
@@ -1,17 +1,14 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
+{% block pagename %}
+    Panelists
+{% endblock %}
+{% block button %}
+<a href="/new_panel/">
+    <button>Create New Panelist</button>
+</a>
+{% endblock %}
 {% block content %}
-    <div class='create_button'>
-        <a href="/new_panel/">
-            <button onclick="on(); createTable()">Create New Panelist</button>
-        </a>
-
-        <form method='POST'>
-            <input type='text' placeholder='Search'>
-            <button type='submit' id='search' name='search' value='search'>Search</submit>
-        </form>
-    </div>
-
     <div class='display_grid'>
         {% if panels %}
             {% for panel in panels %}
@@ -42,8 +39,4 @@
             {% endfor %}
         {% endif %}
     </div>
-    
-
-    <script>
-    </script>
 {% endblock %}
