--- a/website/templates/admin/rubrics.html
+++ b/website/templates/admin/rubrics.html
@@ -1,13 +1,14 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
+{% block pagename %}
+    Rubrics
+{% endblock %}
+{% block button %}
+<a href="/new_rubric/">
+    <button>Create New Rubric</button>
+</a>
+{% endblock %}
 {% block content %}
-
-    <div class='create_button'>
-        <a href="/new_rubric/">
-            <button>Create New Rubric</button>
-        </a>
-    </div>
-
     <div class='display_grid'>
         {% if rubrics %}
             {% for rubric in rubrics %}
@@ -31,11 +32,7 @@
                         <button>Delete</button>
                     </a>
                 </div>
-                
             {% endfor %}
         {% endif %}
     </div>
-    
-    <script>
-    </script>
 {% endblock %}
