--- a/website/templates/admin/schedule.html
+++ b/website/templates/admin/schedule.html
@@ -1,13 +1,14 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
-
+{% block pagename %}
+    Schedules
+{% endblock %}
+{% block button %}
+<a href="/new_sched/">
+    <button>Create New Defense Schedule</button>
+</a>
+{% endblock %}
 {% block content %}
-    <div class='create_button'>
-        <a href="/new_sched/">
-            <button>Create New Defense Schedule</button>
-        </a>
-    </div>
-
     <div class='display_grid'>
         {% if defenses %}
             {% for defense in defenses %}
@@ -21,10 +22,8 @@
                         {% else: %}
                             <p>    - {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
                         {% endif %}
-
                     {% endfor %}
                     <p>Defense Date: {{ defense.start_date}}</p>
-                    <br>
                     <a href="/edit_sched/{{ defense.id }}">
                         <button>Edit</button>
                     </a>
