--- a/website/templates/admin/gradesheets/gradesheet.html
+++ b/website/templates/admin/gradesheets/gradesheet.html
@@ -1,7 +1,7 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
 {% block pagename %}
-Rubrics
+Gradesheets
 {% endblock %}
 {% block button %}
 <a href="/new_sheet/">
@@ -36,8 +36,4 @@ Rubrics
             {% endfor %}
         {% endif %}
     </div>
-
-    
-    
-
 {% endblock %}
