--- a/website/templates/admin/gradesheets/new_sheet.html
+++ b/website/templates/admin/gradesheets/new_sheet.html
@@ -1,7 +1,7 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
 {% block pagename %}
-Rubrics
+Gradesheets
 {% endblock %}
 {% block button %}
 <a href="">
@@ -11,6 +11,10 @@ Rubrics
 {% block content %}
 <body onload='check()'>
     <style>
+        .disabledDiv {
+            pointer-events: none;
+            opacity: 0.4;
+        }
        .MultiCheckBox {
            background-color: white;
             border:1px solid #e2e2e2;
@@ -62,40 +66,35 @@ Rubrics
         .MultiCheckBoxDetailHeader {
             overflow:hidden;
             position:relative;
+            display: flex;
+            align-items: center;
             height: 40px;
             background-color:#3d3d3d;
         }
 
         .MultiCheckBoxDetailHeader>input {
             position: absolute;
-            top: 15px;
             left: 3px;
         }
 
         .MultiCheckBoxDetailHeader>div {
             position: absolute;
-            top: 5px;
             left: 24px;
             color:#fff;
         }
 
-        .mulinput {
-            position: relative;
-            top: 12px;
-            margin-right: 9px;
+        .cont {
+            display: flex;
+            align-items: center;
+            height: 40px;
         }
-        
 
     </style>
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 
     <script>
         var arr = [];
-        '{% for rubric in to_edit.rubric %}'
-            arr.push('{{ rubric.id }}')
-        '{% endfor %}'
-
-        console.log(arr)
+        var rubric_arr = '{{ back_arr | tojson }}'
 
         $(document).ready(function () {
             $(document).on("click", ".MultiCheckBox", function () {
@@ -159,7 +158,7 @@ Rubrics
 
                 this.hide();
                 this.attr("multiple", "multiple");
-                var divSel = $("<div class='MultiCheckBox'>" + localOption.defaultText + "<span class='k-icon k-i-arrow-60-down'><svg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='sort-down' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512' class='svg-inline--fa fa-sort-down fa-w-10 fa-2x'><path fill='currentColor' d='M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41z' class=''></path></svg></span></div>").insertBefore(this);
+                var divSel = $("<div class='MultiCheckBox' id='selectionBox'>" + localOption.defaultText + "<span class='k-icon k-i-arrow-60-down'><svg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='sort-down' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 320 512' class='svg-inline--fa fa-sort-down fa-w-10 fa-2x'><path fill='currentColor' d='M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41z' class=''></path></svg></span></div>").insertBefore(this);
                 divSel.css({ "width": localOption.width });
 
                 var detail = $("<div class='MultiCheckBoxDetail'><div class='MultiCheckBoxDetailHeader'><input type='checkbox' class='mulinput' value='-1982' /><div>Select All</div></div><div class='MultiCheckBoxDetailBody'></div></div>").insertAfter(divSel);
@@ -171,9 +170,7 @@ Rubrics
                     var val = $(this).attr("value");
                     if (val == undefined)
                         val = '';
-
-                    
-                    if (arr.includes(val.toString())) {
+                    if (rubric_arr.includes(val.toString())) {
                         multiCheckBoxDetailBody.append("<div class='cont'><div><input type='checkbox' class='mulinput' value='" + val + "' checked/></div><div>" + $(this).text() + "</div></div>");
                     } else {
                         multiCheckBoxDetailBody.append("<div class='cont'><div><input type='checkbox' class='mulinput' value='" + val + "' /></div><div>" + $(this).text() + "</div></div>");
@@ -199,24 +196,28 @@ Rubrics
         });
     </script>
 
-    {% set rub_type = to_edit.sheet_type %}
     <div id="overlay">
         <div id="text">
             <div id='close_button'>
                 <a href='/gradesheets'>
                     <img src="{{ url_for('static', filename='close.png') }}">
                 </a>
-                
             </div>
 
-            <p>Edit Gradesheet Template</p>
+            <p>Create new Gradesheet Template</p>
             <div>
                 <form method='POST'>
                     <label for="sheetCode">Gradesheet Code:</label>
-                    <input type='text' id='sheetCode' name='sheetCode' value ="{{ to_edit.id }}" disabled><br>
-                    <label>Rubric Type: {{ to_edit.sheet_type }}</label>
+                    <input type='text' id='sheetCode' name='sheetCode' value ="{{ current_id }}" disabled><br>
+                    <label for="rubType">Rubric Type:</label>
+                    <input onchange="yeah()" type="radio" id="group" name="rubType" value="Group" required>
+                    <label for="group">Group</label>
+                    <input onchange="yeah()" type="radio" id="individual" name="rubType" value="Individual">
+                    <label for="individual">Individual</label>
+
                     <br>
 
+                        
                     <label>Select Rubric(s) Below</label>
                     <select id="test">
                         {% for rubric in rubrics %}
@@ -232,6 +233,7 @@ Rubrics
             </div>
         </div>
     </div>
+
 
     <div class='display_grid'>
         {% if templates %}
@@ -261,6 +263,8 @@ Rubrics
     </div>
 
     <script>
+        
+
         function putHere() {
             document.getElementById('invis').value = arr;
         }
@@ -294,6 +298,47 @@ Rubrics
                 });
             });
         });
+
+    
+        function yeah() {
+            selected_value = $("input[name='rubType']:checked").val();
+            console.log('Selected Value: ' + selected_value)
+            var clock = {
+                "key": selected_value //say
+            };
+
+
+            $.ajax({
+                url: '/parse_data/',
+                type: 'POST',
+                dataType: 'json',
+                data: JSON.stringify(clock),
+                contentType:"application/json; charset=UTF-8"
+            })
+            .done(function(data) {
+                window.location.href = "/new_sheet/" + data['key'];
+            })
+        }
+
+
+        function check() {
+
+            var temp = 'empty' 
+            if ('{{ back_rub }}' != 'None' && '{{ rub_type }}' != 'None') {
+                temp = '{{ rub_type }}'
+            } else if ('{{ back_rub }}' == 'None') {
+                temp = '{{ rub_type }}'
+            } else {
+                temp = '{{ back_rub }}'
+            }
+
+
+            if (temp == 'Individual') {
+                document.getElementById('individual').checked = true;
+            } else if (temp == 'Group') {
+                document.getElementById('group').checked = true;
+            } 
+        }
     </script>
 </body>
     
