--- a/website/templates/admin/schedules/delete_sched.html
+++ b/website/templates/admin/schedules/delete_sched.html
@@ -35,17 +35,30 @@
                     <p>ID: {{ defense.id }}</p>
                     <p>Group Name: {{ defense.group.name }} </p>
                     <p>Panels:</p>
-                    {% for panel in defense.panels %}
-                        {% if panel.id == defense.head_panel_id: %}
-                            <p>    HP - {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
-                        {% else: %}
-                            <p>    - {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
-                        {% endif %}
-                    {% endfor %}
+                    <ul>
+                        {% for panel in defense.panels %}
+                            {% if panel.id == defense.head_panel_id: %}
+                                <li>{{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}. - HP</li>
+                            {% else: %}
+                                <li>{{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</li>
+                            {% endif %}
+                        {% endfor %}
+                    </ul>
                     <p>Defense Date: {{ defense.start_date}}</p>
+                    <a href="">
+                        <button>Assign Individual Gradesheet</button>
+                    </a>
+                    <br>
+                    <br>
+                    <a href="">
+                        <button>Assign Group Gradesheet</button>
+                    </a>
+                    <br>
+                    <br>
                     <a href="/edit_sched/{{ defense.id }}">
                         <button>Edit</button>
                     </a>
+                    
                     <a href="/delete_sched/{{ defense.id }}">
                         <button>Delete</button>
                     </a>
